--- a/portrait/v2.1-unlocked.html
+++ b/portrait/v2.1-unlocked.html
@@ -88,7 +88,7 @@
 	
 	<div class="layout-bg">
 	<!---game-->
-	<div class="layout" onclick="parent.location='https://m.coolmathgames.com/0-block-the-pig/play' ">
+	<div class="layout" onclick="Landscape(); parent.location='https://m.coolmathgames.com/0-block-the-pig/play' ">
 		<img class="img" src="res/pig.png">
 			<div class="text">1. Block The Pig</div>
 	</div>
