--- a/portrait/locked.html
+++ b/portrait/locked.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=2, maximum-scale=1.0, user-scalable=no" />
-<link href="../res/stylev2.3.css" rel="stylesheet">
+<link href="../res/style.css" rel="stylesheet">
 <script src="../res/jquery.min.js"></script>
 <script>version = "2.1";</script>
 <style>
